# cupid_code

./: .gitignore  README.md  git_help.md
Code/: Defaults.md  README.md  pyproject.toml  setup.sh  start.sh
Code/_server/_server/: asgi.py  urls.py
Code/_server/api/: api_keys.txt
Code/_server/api/migrations/: 0001_initial.py
Code/_server/api/tests/: cupid_tests.py  dater_tests.py  general_tests.py  manager_tests.py  user_tests.py
Code/client/: README.md  index.html  package-lock.json  package.json  vite.config.js
Code/client/src/: App.vue  navs.txt  style.css
Code/client/src/CupidVues/: CupidDetails.vue  CupidFeedback.vue  CupidHome.vue  GigComplete.vue  GigData.vue  GigDetails.vue
Code/selenium/: .gitignore  README.md  options.conf  options.json  run_tests.py  test.py  test_cupid.py  test_dater.py  test_login.py  utils.py
Code/server/: .env.example  README.md
Code/server/api/: helpers.py  models.py  urls.py  views.py
Code/server/core/: middleware.py  urls.py  views.py
Code/server/server/: settings.py  urls.py
Dev/: README.md  pyproject.toml  setup.sh  start.sh  stop.sh
Dev/_server/: .env.example
Dev/_server/_server/: settings.py  urls.py  wsgi.py
Dev/_server/api/: api_keys.txt  helper.py  helpers.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
Dev/_server/core/: middleware.py  urls.py  views.py
Dev/_server/registration/: urls.py  views.py
Dev/client/: index.html  package-lock.json  package.json  vite.config.js
Dev/client/src/: App-old.vue  App.vue  SignUp.vue  Welcome.vue  main.js  router.js  style.css
(+124 files in other folders)
